--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "mysql": "^2.18.1",
