--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ger-fin-api",
-  "version": "0.0.1",
+  "name": "aldenise-consultoria-api",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -60,7 +60,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.79.0"
   },
   "jest": {
     "moduleFileExtensions": [
